# eddysearch

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  development.md  environment.yml  pyproject.toml
.github/: config.yml
.github/ISSUE_TEMPLATE/: --bug-report.md  --feature-request.md  config.yml
.github/workflows/: main.yml
eddy/: geneticsearch.py  objective.py  randomsearch.py  strategy.py  visualization.py
eddy/search/: geneticsearch.py  gradient.py  population.py  randomsearch.py
eddysearch/: objective.py  strategy.py
eddysearch/search/: geneticsearch.py  gradient.py  population.py  randomsearch.py
examples/: genetic_vs_random.py
manim/: searchpathscene.py
tests/: test_gradient.py  test_objective.py
