[tool.poetry]
name = "pyEddy"
version = "0.1.0"
description = ""
authors = [
    "Julian Stier <julian.stier@uni-passau.de>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/innvariant/pyEddy"
repository = "https://github.com/innvariant/pyEddy"
documentation = "https://github.com/innvariant/pyEddy"

keywords = ["optimization", "inference", "training"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"