[tool.poetry]
name = "eddy"
version = "0.2.0"
description = ""
authors = [
    "Julian Stier <julian.stier@uni-passau.de>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/innvariant/eddy"
repository = "https://github.com/innvariant/eddy"
documentation = "https://github.com/innvariant/eddy"

keywords = ["optimization", "search strategy", "evolutionary search", "inference", "training"]

include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
